--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     <h1>Welcome to My AI Generator</h1>
+    <footer>
+      This AI project was coded by
+      <a href="https://www.linkedin.com/in/tess-andersen/" target="_blank"
+        >Tess Andersen</a
+      >
+      and is
+      <a
+        href="https://github.com/andersentess/ai-random-fact-generator"
+        target="_blank"
+        >open-sourced on GitHub.</a
+      >
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
