--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Random Fact Generator</title>
+    <title>AI Random Fact Generator</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Welcome to My AI Generator</h1>
+    <header>
+      <h1>AI Random Fact Generator</h1>
+    </header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter a keyword to unlock a random fact."
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        The random fact will go here
+        <br />
+        The random fact will go here
+        <br />
+        The random fact will go here
+      </div>
+    </main>
+
     <footer>
       This AI project was coded by
       <a href="https://www.linkedin.com/in/tess-andersen/" target="_blank"
