--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>AI Random Fact Generator</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
@@ -12,7 +13,7 @@
     </header>
 
     <main>
-      <form>
+      <form id="fact-generator-form">
         <input
           type="text"
           placeholder="Enter a keyword to unlock a random fact."
@@ -22,13 +23,7 @@
         />
         <input type="submit" />
       </form>
-      <div>
-        The random fact will go here
-        <br />
-        The random fact will go here
-        <br />
-        The random fact will go here
-      </div>
+      <div class="fact" id="fact"></div>
     </main>
 
     <footer>
