--- a/index.html
+++ b/index.html
@@ -1,43 +1,50 @@
-<!DOCTYPE html>
+"<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script
+      src="https://unpkg.com/typewriter-effect@latest/dist/core.js"
+      alt="logo"
+    ></script>
     <title>AI Random Fact Generator</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <header>
-      <h1>AI Random Fact Generator</h1>
-    </header>
+    <div class="container">
+      <img src="src/logo-tessandersen-no-bg.png" />
+      <header>
+        <h1>AI Random Fact Generator</h1>
+      </header>
 
-    <main>
-      <form id="fact-generator-form">
-        <input
-          type="text"
-          placeholder="Enter a keyword to unlock a random fact."
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div class="fact" id="fact"></div>
-    </main>
+      <main>
+        <form id="fact-generator-form">
+          <input
+            type="text"
+            placeholder="Enter a keyword to unlock a random fact."
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="fact" id="fact"></div>
+      </main>
 
-    <footer>
-      This AI project was coded by
-      <a href="https://www.linkedin.com/in/tess-andersen/" target="_blank"
-        >Tess Andersen</a
-      >
-      and is
-      <a
-        href="https://github.com/andersentess/ai-random-fact-generator"
-        target="_blank"
-        >open-sourced on GitHub.</a
-      >
-    </footer>
+      <footer>
+        This AI project was coded by
+        <a href="https://www.linkedin.com/in/tess-andersen/" target="_blank"
+          >Tess Andersen</a
+        >
+        and is
+        <a
+          href="https://github.com/andersentess/ai-random-fact-generator"
+          target="_blank"
+          >open-sourced on GitHub.</a
+        >
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
