--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
       src="https://unpkg.com/typewriter-effect@latest/dist/core.js"
       alt="logo"
     ></script>
-    <title>AI Random Fact Generator</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
+    <title>AI Random Fact Generator</title>
   </head>
   <body>
     <div class="container">
@@ -26,6 +27,7 @@
             required
             autocomplete="off"
             class="instructions"
+            id="user-instructions"
           />
           <input type="submit" class="submit-button" />
         </form>
