--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="fact" id="fact"></div>
+        <div class="fact hidden" id="fact"></div>
       </main>
 
       <footer>
