edited placeholder text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <form id="fact-generator-form">
           <input
             type="text"
-            placeholder="Enter a keyword to unlock a random fact."
+            placeholder="Enter a keyword for a random fact"
             autofocus
             required
             autocomplete="off"
